option('nightly'     , type: 'boolean', value: false    , description: 'Label this version as a nightly build.')
option('paranoid'    , type: 'boolean', value: false    , description: 'Promote run-time warnings to errors.')
option('blas'        , type: 'string' , value:'openblas', description: 'BLAS library/framework to use, such as "openblas", "Accelerate", "blis", "cblas". Anything but the default is experimental at best.')
option('debug_arrays', type: 'boolean', value: false    , description: 'Promote run-time warnings to errors.')
option('steamruntime', type: 'boolean', value: false    , description: 'If you like this stuff you should be ashamed..')
option('executable'  , type: 'feature', value: 'enabled', description: 'Enable compilation of Naev\'s executable.')
option('docs_c'      , type: 'feature', value: 'auto'   , description: 'Enable compilation of Naev\'s C documentation.')
option('docs_lua'    , type: 'feature', value: 'auto'   , description: 'Enable compilation of Naev\'s Lua documentation.')
option('luajit'      , type: 'feature', value: 'auto'   , description: 'Enable LuaJIT rather than standard Lua.')
option('ndata_path'  , type: 'string' , value: ''       , description: 'Set the path ndata will be installed to (relative to the install prefix).')
