SUBDIRS = tk

bin_PROGRAMS = naev

AM_CFLAGS = $(NAEV_CFLAGS)
naev_LDADD = $(NAEV_LIBS)
naev_DEPENDENCIES = $(NAEV_DEPENDENCIES)

naev_SOURCES = \
	ai.c \
	array.c \
	base64.c \
	board.c \
	collision.c \
	colour.c \
	comm.c \
	cond.c \
	conf.c \
	console.c \
	debris.c \
	dialogue.c \
	economy.c \
	equipment.c \
	escort.c \
	event.c \
	explosion.c \
	faction.c \
	fleet.c \
	font.c \
	gui.c \
	gui_osd.c \
	hook.c \
	info.c \
	input.c \
	intro.c \
	joystick.c \
	land.c \
	map.c \
	md5.c \
	menu.c \
	mission.c \
	music.c \
	music_openal.c \
	music_sdlmix.c \
	naev.c \
	ndata.c \
	nebula.c \
	news.c \
	nfile.c \
	nlua.c \
	nlua_cli.c \
	nlua_diff.c \
	nlua_evt.c \
	nlua_faction.c \
	nlua_hook.c \
	nlua_misn.c \
	nlua_music.c \
	nlua_naev.c \
	nlua_pilot.c \
	nlua_planet.c \
	nlua_player.c \
	nlua_rnd.c \
	nlua_ship.c \
	nlua_space.c \
	nlua_system.c \
	nlua_time.c \
	nlua_tk.c \
	nlua_var.c \
	nlua_vec2.c \
	nmath.c \
	nondata.c \
	npc.c \
	ntime.c \
	nxml.c \
	opengl.c \
	opengl_ext.c \
	opengl_matrix.c \
	opengl_render.c \
	opengl_tex.c \
	opengl_vbo.c \
	options.c \
	outfit.c \
	pack.c \
	pause.c \
	perlin.c \
	physics.c \
	pilot.c \
	plasmaf.c \
	player.c \
   queue.c \
	rng.c \
	save.c \
	ship.c \
	sound.c \
	sound_openal.c \
	sound_sdlmix.c \
	space.c \
	spfx.c \
	toolkit.c \
	unidiff.c \
	weapon.c \
	ai.h \
   ai_extra.h \
	array.h \
	base64.h \
	board.h \
	collision.h \
	colour.h \
	comm.h \
	cond.h \
	conf.h \
	config.h \
	console.h \
	debris.h \
	dialogue.h \
	economy.h \
	equipment.h \
	escort.h \
	event.h \
	explosion.h \
	faction.h \
	fleet.h \
	font.h \
	gui.h \
	gui_osd.h \
	hook.h \
	info.h \
	input.h \
	intro.h \
	joystick.h \
	land.h \
	log.h \
	map.h \
	md5.h \
	menu.h \
	mission.h \
	music.h \
	music_openal.h \
	music_sdlmix.h \
	naev.h \
	ncompat.h \
	ndata.h \
	nebula.h \
	news.h \
	nfile.h \
	nlua.h \
	nlua_cli.h \
	nlua_diff.h \
	nlua_evt.h \
	nlua_faction.h \
	nlua_hook.h \
	nlua_misn.h \
	nlua_music.h \
	nlua_naev.h \
	nlua_pilot.h \
	nlua_planet.h \
	nlua_player.h \
	nlua_rnd.h \
	nlua_ship.h \
	nlua_space.h \
	nlua_system.h \
	nlua_time.h \
	nlua_tk.h \
	nlua_var.h \
	nlua_vec2.h \
	nluadef.h \
	nmath.h \
	nopenal.h \
	npc.h \
	nstd.h \
	ntime.h \
	nxml.h \
	opengl.h \
	opengl_ext.h \
	opengl_matrix.h \
	opengl_render.h \
	opengl_tex.h \
	opengl_vbo.h \
	options.h \
	outfit.h \
	pack.h \
	pause.h \
	perlin.h \
	physics.h \
	pilot.h \
	plasmaf.h \
	player.h \
   queue.h \
	rng.h \
	save.h \
	ship.h \
	sound.h \
	sound_openal.h \
	sound_priv.h \
	sound_sdlmix.h \
	space.h \
	spfx.h \
	toolkit.h \
	unidiff.h \
	weapon.h
